@startuml projects

class Orginazation {
    name: string
}
class Project {
    name: string
}
class User {
    name: string
}
class Group {
    name: string
}
class Tag {
    name: string
}
class Resource {
    name: string
    value: Value
}

class ResourceType {
    name: string
    blueprint: Type
}


Orginazation --> Project
Orginazation --> User
Orginazation --> Group

Project <--"0..*" User
Project --> Resource
Project *--> Tag
Project <-- Group

Resource <-- User
Resource <-- Group
Resource *--> Tag
Resource --> ResourceType

User -- Group


@enduml